force-app/main/default/objects/OM_GeneralSettings__c/OM_GeneralSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Configuraciones Generales</label>
</CustomObject>