force-app/main/default/objects/OM_GeneralSettings__c/fields/OM_AutocitaEmail__c.field-meta.xml
<CustomField>
    <fullName>OM_AutocitaEmail__c</fullName>
    <label>Autocita Email</label>
    <type>Email</type>
</CustomField>