force-app/main/default/objects/OM_GeneralSettings__c/fields/OM_AutocitaProfile__c.field-meta.xml
<CustomField>
    <fullName>OM_AutocitaProfile__c</fullName>
    <label>Autocita Profile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>