force-app/main/default/objects/OM_GeneralSettings__c/fields/OM_Availability__c.field-meta.xml
<CustomField>
    <fullName>OM_Availability__c</fullName>
    <label>Horario atención</label>
    <length>255</length>
    <type>Text</type>
</CustomField>