force-app/main/default/objects/OM_GeneralSettings__c/fields/OM_ContractURL__c.field-meta.xml
<CustomField>
    <fullName>OM_ContractURL__c</fullName>
    <label>Expediente URL</label>
    <type>Url</type>
</CustomField>