force-app/main/default/objects/OM_GeneralSettings__c/fields/OM_FAQS_URL__c.field-meta.xml
<CustomField>
    <fullName>OM_FAQS_URL__c</fullName>
    <label>FAQs URL</label>
    <type>Url</type>
</CustomField>