force-app/main/default/objects/OM_GeneralSettings__c/fields/OM_LOPD__c.field-meta.xml
<CustomField>
    <fullName>OM_LOPD__c</fullName>
    <label>LOPD</label>
    <type>Url</type>
</CustomField>