force-app/main/default/objects/OM_GeneralSettings__c/fields/OM_SMSChannel__c.field-meta.xml
<CustomField>
    <fullName>OM_SMSChannel__c</fullName>
    <label>SMS Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>